# telegram-api-server

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  minio_init.sh
.github/workflows/: docker-image.yml
api/: Cargo.toml  chat.html
api/src/: lib.rs
api/src/error/: mod.rs
api/src/handler/: mod.rs
api/src/handler/account/: mod.rs  nsfw.rs  other_users.rs  seamless.rs  two_fa.rs  user.rs
api/src/handler/animated_emojis/: mod.rs
api/src/handler/authorization/: mod.rs  passport.rs
api/src/handler/autodownload/: mod.rs
api/src/handler/autosave/: mod.rs
api/src/handler/bot/: attachment_menu.rs  mod.rs
api/src/handler/channels/: mod.rs  native_anti_spam_system.rs  sponsored.rs
api/src/handler/chatinvites/: mod.rs
api/src/handler/chats/: imported.rs  mod.rs
api/src/handler/configuration/: mod.rs
api/src/handler/contacts/: mod.rs  temporary_profile_links.rs
api/src/handler/dialogs/: mod.rs
api/src/handler/drafts/: mod.rs
api/src/handler/emoji/: mod.rs
api/src/handler/files/: mod.rs
api/src/handler/folders/: mod.rs
api/src/handler/forums/: mod.rs
api/src/handler/games/: mod.rs
api/src/handler/help/: mod.rs
api/src/handler/links/: mod.rs
api/src/handler/localization/: mod.rs
api/src/handler/messages/: instant_view_pages.rs  mod.rs  reactions.rs  scheduled.rs  secret_chats.rs  thread.rs  translation.rs
api/src/handler/miscellaneous/: mod.rs
api/src/handler/notification/: mod.rs  sounds.rs
api/src/handler/payments/: mod.rs
api/src/handler/phone/: group_calls_and_live_streaming.rs  mod.rs  user_profile_pictures.rs
api/src/handler/polls/: mod.rs
api/src/handler/premium/: mod.rs
api/src/handler/qrcode/: mod.rs
api/src/handler/statistics/: mod.rs
api/src/handler/stickers/: mod.rs
api/src/handler/themes/: mod.rs
api/src/handler/tos/: mod.rs
api/src/handler/updates/: mod.rs
api/src/handler/usernames/: mod.rs
api/src/handler/wallpapers/: mod.rs
api/src/handler/websocket/: mod.rs
api/src/models/: message.rs  mod.rs  user.rs
core/: Cargo.toml
crypto/: Cargo.toml
crypto/src/: aes.rs  auth_key.rs  factorize.rs  lib.rs  rsa.rs  two_factor_auth.rs
db/: Cargo.toml
mtproto/: Cargo.toml
mtproto/src/: authentication.rs  lib.rs  manual_tl.rs  utils.rs
mtproto/src/mtp/: encrypted.rs  mod.rs  plain.rs
mtproto/src/transport/: abridged.rs  full.rs  intermediate.rs  mod.rs
socket/: Cargo.toml
socket/src/: axum.rs  lib.rs  server.rs  socket.rs
sockets/: Cargo.toml
sockets/src/: axum.rs  lib.rs  server.rs  session.rs
sqlx-core/: Cargo.toml
telegram-crypto/: Cargo.toml
tl-gen/: Cargo.toml
tl-gen/src/: enums.rs  grouper.rs  lib.rs  metadata.rs  rustifier.rs  structs.rs
tl-parser/: Cargo.toml
tl-parser/src/: errors.rs  lib.rs  tl_iterator.rs  utils.rs
tl-parser/src/tl/: category.rs  definition.rs  flag.rs  mod.rs  parameter.rs  parameter_type.rs  ty.rs
tl-types/: Cargo.toml
tl-types/src/: deserialize.rs  generated.rs  lib.rs  serialize.rs
tl-types/tl/: api.tl
