[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx-core = { path = "../sqlx-core" }
futures = "0.3"
tokio = { version = "1.23.0", features = ["full"] }
axum = { version = "0.6.18", features = ["ws", "http2"] }
grammers-tl-gen = { git = "https://github.com/Toursslivers/grammers" }
grammers-tl-types = { git = "https://github.com/Toursslivers/grammers" }
grammers-mtproto = { git = "https://github.com/Toursslivers/grammers" }
grammers-client = { git = "https://github.com/Toursslivers/grammers" }
grammers-crypto = { git = "https://github.com/Toursslivers/grammers" }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs"] }
tower-cookies = "0.9.0"
anyhow = "1.0.66"
dotenvy = "0.15.6"
serde = "1.0.149"
serde_json = "1.0.89"
tera = "1.17.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
async-trait = "0.1.68"
headers = "0.3.0"
http = "0.2.9"
sockets = { path = "../sockets" }
telegram-crypto = { path = "../telegram-crypto" }
