[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "0.11.3" # sea-orm version
features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-postgres",
]

[dev-dependencies]
tokio = { version = "1.20.0", features = ["macros", "rt"] }
