[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
getrandom = "0.2.9"
glass_pumpkin = "1.6.0"
hmac = "0.12.1"
num-bigint = "0.4.3"
pbkdf2 = "0.12.1"
sha1 = "0.10.5"
sha2 = "0.10.6"
