[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.0"
getrandom = "0.2.2"
glass_pumpkin = "1.5.0"
hmac = "0.11.0"
num-bigint = "0.4.0"
pbkdf2 = "0.8.0"
sha1 = "0.6.0"
sha2 = "0.9.3"

