[package]
name = "mtproto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
crc32fast = "1.3.2"
flate2 = "1.0.26"
getrandom = "0.2.9"
num-bigint = "0.4.3"
sha1 = "0.10.5"
crypto = { path = "../crypto" }
tl-types = { path = "../tl-types" }
