[package]
name = "sockets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
base64 = "0.21.2"
futures = "0.3.28"
http = "0.2.9"
tokio = { version = "1.23.0", features = ["sync", "rt", "macros", "time"] }
tracing = "0.1.37"
url = "2.3.1"
cfg-if = "1.0.0"

axum = { version = "0.6.18", features = ["ws", "http2"] }
tokio-tungstenite = { version = "0.19.0", optional = true }
tokio-rustls = { version = "0.24.0", optional = true }
tokio-native-tls = { version = "0.3.1", optional = true }
